added div on html structure

--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
     <header>
      <h1>Ramen Rater</h1>
    </header>
+<div id="ramen-menu"></div>
+
+
+   <div id="selected-ramen-container">
+     <div class="ramen-card">
+       <img id="selected-ramen-image" src="" alt="Selected Ramen" />
+       <div class="overlay">
+         <h3 id="overlay-name">Name</h3>
+         <p id="overlay-restaurant">Restaurant</p>
+       </div>
+</div>
+     <div id="ramen-detail">
+       <h2>Ramen Details</h2>
+       <p><strong>Rating:</strong> <span id="detail-rating"></span></p>
+       <p><strong>Comment:</strong> <span id="detail-comment"></span></p>
+     </div>
+   </div>
 
 </body>
 </html>
