--- a/index.html
+++ b/index.html
@@ -1,32 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ramen Rater</title>
     <link rel="stylesheet" href="./css/styles.css" />
-</head>
-<body>
+  </head>
+  <body>
     <header>
-     <h1>Ramen Rater</h1>
-   </header>
-<div id="ramen-menu"></div>
+      <h1>Ramen Rater</h1>
+    </header>
+    <div id="ramen-menu"></div>
 
+    <div id="selected-ramen-container">
+      <div class="ramen-card">
+        <img id="selected-ramen-image" src="" alt="Selected Ramen" />
+        <div class="overlay">
+          <h3 id="overlay-name">Name</h3>
+          <p id="overlay-restaurant">Restaurant</p>
+        </div>
+      </div>
+      <div id="ramen-detail">
+        <h2>Ramen Details</h2>
+        <p><strong>Rating:</strong> <span id="detail-rating"></span></p>
+        <p><strong>Comment:</strong> <span id="detail-comment"></span></p>
+      </div>
+    </div>
+    <form id="new-ramen">
+      <h2>Add New Ramen</h2>
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" required />
 
-   <div id="selected-ramen-container">
-     <div class="ramen-card">
-       <img id="selected-ramen-image" src="" alt="Selected Ramen" />
-       <div class="overlay">
-         <h3 id="overlay-name">Name</h3>
-         <p id="overlay-restaurant">Restaurant</p>
-       </div>
-</div>
-     <div id="ramen-detail">
-       <h2>Ramen Details</h2>
-       <p><strong>Rating:</strong> <span id="detail-rating"></span></p>
-       <p><strong>Comment:</strong> <span id="detail-comment"></span></p>
-     </div>
-   </div>
+      <label for="restaurant">Restaurant:</label>
+      <input type="text" id="restaurant" name="restaurant" required />
 
-</body>
+      <label for="image">Image URL:</label>
+      <input type="text" id="image" name="image" required />
+
+      <label for="rating">Rating:</label>
+      <input
+        type="number"
+        id="rating"
+        name="rating"
+        min="1"
+        max="10"
+        required
+      />
+      <label for="comment">Comment:</label>
+      <textarea id="comment" name="comment" required></textarea>
+
+      <button type="submit">Add Ramen</button>
+    </form>
+  </body>
 </html>
